--- a/client/src/style/LoginForm.css
+++ b/client/src/style/LoginForm.css
@@ -10,12 +10,12 @@
   
   .login-form {
     background-color: white;
-    padding: 30px;
+    padding: 40px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
  /* border: 1px solid red; */
- width: 25%;
+ width: 20%;
   }
   
   h2 {
@@ -31,12 +31,12 @@
   }
   
   input {
-    width: 30%;
-    padding: 12px 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 18px;
     margin: 5px 0px;
+    width: 90%;
+    height: 40px;
   }
   
   button {
