--- a/client/src/style/Register.css
+++ b/client/src/style/Register.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100%;
     background: linear-gradient(135deg, #50a3a2 0%, #53e3a6 100%);
   }
   
@@ -14,7 +15,8 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    max-width: 400px;
+ width: 20%;
+
   }
   
   h2 {
@@ -28,8 +30,8 @@
   }
   
   input {
-    width: 100%;
-    padding: 12px 20px;
+    width: 90%;
+    height: 40px;
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 18px;
@@ -43,10 +45,13 @@
     border-radius: 8px;
     cursor: pointer;
     font-size: 20px;
+    width :90%;
+    height: 45px;
   }
   
   button:hover {
     background-color: #0056b3;
+   
   }
 
   .redirect{
